--- a/server.properties
+++ b/server.properties
@@ -1,14 +1,14 @@
 force-gamemode=false
 allow-nether=true
 enforce-whitelist=false
-gamemode=0
+gamemode=1
 broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=1
 spawn-monsters=true
 op-permission-level=4
-pvp=true
+pvp=false
 snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
@@ -17,7 +17,7 @@ max-players=100
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
-server-port=25565
+server-port=19132
 server-ip=
 spawn-npcs=true
 allow-flight=false
